--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 *.class
 out/
-src/com/startjava/Lesson_2_3/calculator/optionsj
-src/com/startjava/Lesson_2_3/calculator/options
+src/com/startjava/Lesson_2_3_4/calculator/optionsj
+src/com/startjava/Lesson_2_3_4/calculator/options
+.idea/
+*.iml
